invasive-control: fix horizontal overflow on smaller screens

--- a/src/app/+theme/invasive-control/invasive-control.component.css
+++ b/src/app/+theme/invasive-control/invasive-control.component.css
@@ -1,5 +1,3 @@
 :host {
-    display: flex;
-    flex: 1 0 auto;
-    flex-direction: column;
+    width: 100%;
 }
